# openpa

./: .gitignore  .travis-install-autotools.sh  .travis.yml  CHANGELOG  COPYRIGHT  Makefile.am  README  autogen.sh  configure.ac  configure.in
confdb/: aclocal_util.m4  ax_prefix_config_h.m4
src/: Makefile.am  opa_mem_barriers.h  opa_primitives.c  opa_primitives.h  opa_queue.c  opa_queue.h  opa_util.h
src/primitives/: opa_by_lock.h  opa_c11_atomics.h  opa_emulated.h  opa_gcc_ia64.h  opa_gcc_intel_32_64.h  opa_gcc_intel_32_64_barrier.h  opa_gcc_intel_32_64_ops.h  opa_gcc_intrinsics.h  opa_gcc_ppc.h  opa_gcc_sicortex.h  opa_nt_intrinsics.h  opa_sun_atomic_ops.h
test/: Makefile.am  opa_test.h  sanity.c  test_barriers.c  test_c11.c  test_primitives.c
