# FIXME add copyright

lib_LIBRARIES = libopa.a
libopa_a_SOURCES = opa_primitives.c opa_queue.c

include_HEADERS = config.h opa_mem_barriers.h opa_primitives.h opa_queue.h      \
                  opa_util.h primitives/opa_by_lock.h primitives/opa_emulated.h \
                  primitives/opa_gcc_ia64.h  primitives/opa_gcc_intel_32_64.h   \
                  primitives/opa_gcc_intrinsics.h primitives/opa_gcc_ppc.h      \
                  primitives/opa_gcc_sicortex.h primitives/opa_nt_intrinsics.h  \
                  primitives/opa_sun_atomic_ops.h
